Bug 606011 - (OSX) focus event not fired on click for elements made specially focusable via tabindex, r=enndeakin, a=blocking