content/html/content/src/nsHTMLTextAreaElement.cpp
@@ -480,7 +480,7 @@ PRBool
 nsHTMLTextAreaElement::IsHTMLFocusable(PRBool aWithMouse,
                                        PRBool *aIsFocusable, PRInt32 *aTabIndex)
 {
-  if (nsGenericHTMLElement::IsHTMLFocusable(aWithMouse, aIsFocusable, aTabIndex)) {
+  if (nsGenericHTMLFormElement::IsHTMLFocusable(aWithMouse, aIsFocusable, aTabIndex)) {
     return PR_TRUE;
   }
 
